# mixedmodels

./: PLAN.md  README.md  pyproject.toml
mixedmodels/: __init__.py  covariance.py  data.py  families.py  formula.py  laplace.py  linalg.py  model.py  nll.py  optimize.py  summary.py
mixedmodels/inference/: __init__.py  bootstrap.py  profile.py  wald.py
scripts/: fit_canonical.R
tests/: cases.py  conftest.py  test_api.py  test_cbpp.py  test_families.py  test_formula.py  test_glmmtmb.py  test_inference.py  test_links.py  test_lmm_sleepstudy.py  test_multi_re.py  test_predict.py
tests/data/: gamma_log_data.csv  negbin_log_data.csv  poisson_log_data.csv  sleepstudy.csv
