[project]
name = "mixedmodels"
version = "0.1.0"
description = "TMB-style mixed-effects models in Python, powered by JAX"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "jax>=0.4.30,<0.5",
    "jaxlib>=0.4.30,<0.5",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "formulaic>=1.0",
    "optimistix>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-benchmark",
    "ruff",
    "statsmodels>=0.14",  # used by `tests/cases.py` to fetch the canonical
                          # lme4 datasets (sleepstudy, cbpp, Dyestuff,
                          # Penicillin) via `get_rdataset`.
]

# Regenerating `tests/cases.py` reference values requires R ≥ 4.4 with the
# `glmmTMB` and `jsonlite` packages installed. Then:
#     Rscript scripts/fit_canonical.R > /tmp/fits.json
# and copy the values into the `Case` declarations.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mixedmodels"]

[tool.ruff]
line-length = 100
target-version = "py311"
